--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@wulkanowy/timetable-parser": "^1.0.8",
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "js-cookie": "^2.2.0",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
     "vue-class-component": "^7.1.0",
