--- a/package.json
+++ b/package.json
@@ -10,31 +10,28 @@
   "dependencies": {
     "@wulkanowy/timetable-parser": "^1.0.8",
     "axios": "^0.19.0",
-    "core-js": "^2.6.5",
+    "core-js": "^3.6.5",
     "js-cookie": "^2.2.0",
-    "vue": "^2.6.10",
+    "vue": "^2.6.11",
     "vue-class-component": "^7.1.0",
-    "vuetify": "^1.5.5"
+    "vuetify": "^2.3.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.8.0",
-    "@vue/cli-plugin-eslint": "^3.8.0",
-    "@vue/cli-plugin-typescript": "^3.8.0",
-    "@vue/cli-service": "^3.8.0",
-    "@vue/eslint-config-airbnb": "^4.0.0",
-    "@vue/eslint-config-typescript": "^4.0.0",
+    "@vue/cli-plugin-babel": "^4.3.0",
+    "@vue/cli-plugin-eslint": "^4.3.0",
+    "@vue/cli-service": "^4.3.0",
+    "@vue/eslint-config-airbnb": "^5.0.2",
     "babel-eslint": "^10.0.1",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
+    "eslint": "^6.8.0",
+    "eslint-config-vuetify": "^0.6.1",
+    "eslint-plugin-vue": "^6.2.2",
+    "eslint-plugin-vuetify": "^1.0.0-beta.6",
     "lint-staged": "^8.1.5",
     "sass": "^1.18.0",
-    "sass-loader": "^7.1.0",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1",
-    "typescript": "^3.4.3",
-    "vue-cli-plugin-vuetify": "^0.5.0",
+    "sass-loader": "^8.0.0",
+    "vue-cli-plugin-vuetify": "^2.0.5",
     "vue-template-compiler": "^2.6.10",
-    "vuetify-loader": "^1.0.5"
+    "vuetify-loader": "^1.3.0"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
