--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "core-js": "^3.6.5",
     "is-url": "^1.2.4",
     "js-cookie": "^2.2.0",
-    "url-join": "^4.0.1",
     "vue": "^2.6.12",
     "vue-class-component": "^7.2.6",
     "vuetify": "^2.3.12"
@@ -29,6 +28,7 @@
     "eslint-plugin-vue": "^7.0.0",
     "eslint-plugin-vuetify": "^1.0.0-beta.6",
     "lint-staged": "^10.4.0",
+    "regenerator-runtime": "^0.13.7",
     "sass": "^1.26.11",
     "sass-loader": "^10.0.2",
     "vue-cli-plugin-vuetify": "^2.0.7",
