--- a/package.json
+++ b/package.json
@@ -8,18 +8,23 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@wulkanowy/timetable-parser": "^1.2.0",
-    "axios": "^0.20.0",
+    "@wulkanowy/timetable-parser": "^1.3.0",
     "core-js": "^3.6.5",
     "is-url": "^1.2.4",
-    "js-cookie": "^2.2.0",
+    "ky": "^0.25.1",
+    "lodash": "^4.17.20",
     "vue": "^2.6.12",
     "vue-class-component": "^7.2.6",
-    "vuetify": "^2.3.12"
+    "vue-router": "^3.2.0",
+    "vuetify": "^2.3.21",
+    "vuex": "^3.4.0",
+    "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.6",
     "@vue/cli-plugin-eslint": "^4.5.6",
+    "@vue/cli-plugin-router": "~4.5.0",
+    "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "^4.5.6",
     "@vue/eslint-config-airbnb": "^5.1.0",
     "babel-eslint": "^10.0.1",
